--- a/views/show_customer.erb
+++ b/views/show_customer.erb
@@ -1,4 +1,7 @@
+ <a href= "/"  class="btn btn-primary">Back</a>
+
 <table class="table table-responsive ">
+
  <thead>
    <th>Parameter</th>
    <th>Customer</th> 
