--- a/views/main.erb
+++ b/views/main.erb
@@ -22,6 +22,9 @@
 	 </tbody>
 </table>
 
+	<a href="/new" class="btn btn-primary">New customer</a>
+
+
 <div class="text-center">
  <ul class="pagination pagination-lg">
    <li><a href="/?page=0">First</a></li>
@@ -38,6 +41,8 @@
  </ul>
 </div>
 
+
+
 <script>
 
 
@@ -48,3 +53,4 @@
 	});
 
 	</script>
+
